git-svn-id: svn://localhost/standaloneuploader/trunk@3 108ff9f6-5af2-5e41-89d4-05bfe6cac289

--- a/StandaloneUploader/MainWindow.xaml
+++ b/StandaloneUploader/MainWindow.xaml
@@ -15,7 +15,8 @@
 		PreviewMouseDown='Window_PreviewMouseDown'>
 	<Grid Name='mainGrid'>
 		<ListBox Name='listboxCurrentlyUploading'
-				 ScrollViewer.CanContentScroll='False'>
+				 ScrollViewer.CanContentScroll='False'
+				 Margin='0 0 0 10'>
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<Border CornerRadius='5'
@@ -98,5 +99,13 @@
 				</Style>
 			</ListBox.ItemContainerStyle>
 		</ListBox>
+		<Label Height='10'
+			   Padding='0'
+			   FontSize='8'
+			   Content='About'
+			   Foreground='White'
+			   HorizontalAlignment='Right'
+			   VerticalAlignment='Bottom'
+			   MouseLeftButtonUp='aboutLabel_MouseLeftButtonUp' />
 	</Grid>
 </Window>
