--- a/StandaloneUploader/MainWindow.xaml
+++ b/StandaloneUploader/MainWindow.xaml
@@ -12,11 +12,13 @@
 		Topmost='True'
 		UseLayoutRounding='True'
 		PreviewMouseLeftButtonDown='Window_PreviewMouseLeftButtonDown'
-		PreviewMouseDown='Window_PreviewMouseDown'>
+		PreviewMouseDown='Window_PreviewMouseDown'
+		Loaded='Window_Loaded'>
 	<Grid Name='mainGrid'>
 		<ListBox Name='listboxCurrentlyUploading'
 				 ScrollViewer.CanContentScroll='False'
-				 Margin='0 0 0 10'>
+				 Margin='0 0 0 10'
+				 BorderThickness='0'>
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<Border CornerRadius='5'
@@ -113,7 +115,7 @@
 			   Padding='0'
 			   FontSize='8'
 			   Content='About'
-			   Foreground='White'
+			   Foreground='Gray'
 			   HorizontalAlignment='Right'
 			   VerticalAlignment='Bottom'
 			   MouseLeftButtonUp='aboutLabel_MouseLeftButtonUp' />
