git-svn-id: svn://localhost/standaloneuploader/trunk@6 108ff9f6-5af2-5e41-89d4-05bfe6cac289

--- a/StandaloneUploader/MainWindow.xaml
+++ b/StandaloneUploader/MainWindow.xaml
@@ -13,6 +13,7 @@
 		UseLayoutRounding='True'
 		PreviewMouseLeftButtonDown='Window_PreviewMouseLeftButtonDown'
 		PreviewMouseDown='Window_PreviewMouseDown'
+		PreviewMouseWheel='Window_PreviewMouseWheel'
 		Loaded='Window_Loaded'>
 	<Grid Name='mainGrid'>
 		<ListBox Name='listboxCurrentlyUploading'
