Mainly added screenshots.
git-svn-id: svn://localhost/standaloneuploader/trunk@20 108ff9f6-5af2-5e41-89d4-05bfe6cac289

--- a/StandaloneUploader/MainWindow.xaml
+++ b/StandaloneUploader/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="StandaloneUploader.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		Title="MainWindow"
+		Title="Standalone Uploader"
+		Icon='app.ico'
 		Height="300"
 		Width="500"
 		SizeToContent='WidthAndHeight'
