--- a/StandaloneUploader/MainWindow.xaml
+++ b/StandaloneUploader/MainWindow.xaml
@@ -49,7 +49,7 @@
 											 Width='300'
 											 Height='10'
 											 DockPanel.Dock='Top'
-											 Value='{Binding CurrentProgressPercentage}'
+											 Value='{Binding CurrentProgressPercentage, Mode=OneWay}'
 											 SourceUpdated='frameworkElementSourceUpdated' />
 								<Button Content='Cancel'
 										Background='Transparent'
